[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "networkaddress"
version = "0.0.3"
description = "A network address manipulation library"
readme = { file = "README", content-type = "text/x-rst" }
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Nguyễn Hoàng Anh Duy", email = "me@duynha.dev" }]
keywords = ["Networking"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Manufacturing",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Telecommunications Industry",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Topic :: Documentation",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Internet",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: System",
    "Topic :: System :: Hardware",
    "Topic :: System :: Networking",
    "Topic :: Utilities",
    "Typing :: Typed",
]

